# haikugraph

./: .gitignore  A3_README.md  A4_README.md  A5_FINAL_STATUS.md  A5_HARDENING_SUMMARY.md  A5_IMPROVEMENTS.md  A6_README.md  A6_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_GAP_TRACKER.md  COMPLETE_FIXES_SUMMARY.md  FIXES_SUMMARY.md  GAP_TRACKER.md  HARDENING_SUMMARY.md  POC_SUMMARY.md  PRODUCT_GAP_TRACKER.md  PROJECT_DOCUMENTATION.html  PROJECT_DOCUMENTATION.md  QUERY_PATTERNS_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFINEMENTS_SUMMARY.md  REPO_MAP.md  TECHNICAL_BUILD_TRACKER.md  VISUALIZATION_IMPROVEMENTS.md  WEB_UI_README.md  pyproject.toml  run.sh  start_server.sh  start_ui.sh
data/: graph.json  join_report.json  plan.json  plan_a6.json  plan_test.json  plan_test2.json  plan_test3.json  plan_test4.json  plan_test5.json  plan_test_fail.json  plan_test_fail2.json  profile.json  result.json  result_a6.json  test 4 (1).xlsx  test 5 (1).xlsx  test_final.json
docs/: A10_DEMO.md  A10_X_COMPARISON_TIME_SCOPING_FIX.md  A11_COMPARISON_NORMALIZATION.md  ENTERPRISE_AUTONOMY_BLUEPRINT.md  VISION_AND_CONNECTORS.md  agentic_team_refactor_plan.md  canonical_queries.sql  industry_onboarding_playbook.md  v1_decommission_criteria.md  v2_cutover_runbook.md  v2_decommission_postmortem.md  v2_incident_playbook.md  v2_quality_review_cadence.md
reports/: CAPABILITY_REPORT.md  agentic_benchmark_20260216_153522.html  agentic_benchmark_20260216_153522.json  benchmark_llm_comparison_20260220_191707.json  benchmark_llm_comparison_20260220_191707.md  benchmark_llm_comparison_20260220_202722.json  benchmark_llm_comparison_20260220_202722.md
scripts/: brd_release_report.py  cleanup_stale_artifacts.sh  demo_followup_compare.py  (+23 more)
(+481 files in other folders)
