[project]
name = "haikugraph"
version = "0.1.0"
description = "dataDa intelligent data assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=10.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
haikugraph = "haikugraph.cli:main"
datada = "haikugraph.cli:main"
datada-web = "haikugraph.api.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "benchmark: LLM mode comparison benchmarks (deselect with '-m not benchmark')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haikugraph"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]
